MyJss + email frontend part of communication pref management

--- a/client-myjss/src/app/modules/general/components/newsletter/newsletter.component.html
+++ b/client-myjss/src/app/modules/general/components/newsletter/newsletter.component.html
@@ -9,9 +9,9 @@
       <div class="col-lg-6 mt-2 mt-sm-4">
         <div class="input-group">
           <label class="form-label fs-base" for="email"></label>
-          <input class="form-control " type="email" placeholder="E-mail" [(ngModel)]="email" required id="email">
+          <input class="form-control " type="email" placeholder="E-mail" [(ngModel)]="mail" required id="email">
           <div class="invalid-feedback">Veuillez fournir une adresse e-mail valide !</div>
-          <button class="btn btn-secondary" type="button" (click)="registerEmail(email)">S'inscrire</button>
+          <button class="btn btn-secondary" type="button" (click)="registerEmail(mail)">S'inscrire</button>
         </div>
       </div>
     </div>
