--- a/client-myjss/src/app/modules/my-account/components/sign-in/sign-in.component.html
+++ b/client-myjss/src/app/modules/my-account/components/sign-in/sign-in.component.html
@@ -16,7 +16,7 @@
           [isMandatory]="true" [isDisabled]="false" type="mail" [isDisplayLabel]="false"
           [icon]="'mail'"></generic-input>
       </div>
-      <button class="btn btn-lg btn-primary w-100 mb-4" (click)="sendConnectionLink()">Recevoir un lien de
+      <button class="btn btn-lg btn-secondary w-100 mb-4" (click)="sendConnectionLink()">Recevoir un lien de
         connexion</button>
     </div>
 
