--- a/client-myjss/src/app/modules/my-account/components/email-communication-preference/email-communication-preference.component.html
+++ b/client-myjss/src/app/modules/my-account/components/email-communication-preference/email-communication-preference.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <communication-preference [mail]="urlMail"></communication-preference>
+  <communication-preference [mail]="urlMail" [validationToken]="validationToken"></communication-preference>
 </div>
