--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -35,38 +35,39 @@
             <img [src]="anonymousConnexion" />
           </a>
         </div>
-      </div>
 
-      <!-- User signed in state. Account dropdown on screens > 576px -->
-      <div class="dropdown nav d-none d-sm-block" *ngIf="currentUser && currentUser.id">
-        <a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-          <avatar class="avatar-select" [user]="currentUser" [size]="48"></avatar>
-          <div class="ps-2">
-            <div class="fs-xs lh-1 opacity-60">Bonjour,</div>
-            <div class="fs-sm dropdown-toggle">{{capitalizeName(currentUser.firstname + " " +currentUser.lastname)}}
+
+        <!-- User signed in state. Account dropdown on screens > 576px -->
+        <div class="dropdown nav" *ngIf="currentUser && currentUser.id">
+          <a class="d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+            <avatar class="avatar-select" [user]="currentUser" [size]="48"></avatar>
+            <div class="ps-2 d-none d-md-block">
+              <div class="fs-xs lh-1 opacity-60">Bonjour,</div>
+              <div class="fs-sm dropdown-toggle">{{capitalizeName(currentUser.firstname + " " +currentUser.lastname)}}
+              </div>
             </div>
-          </div>
-        </a>
-        <div class="dropdown-menu dropdown-menu-end my-1">
-          <h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Mon compte</h6>
-          <ng-container *ngFor="let service of services">
-            <a class="dropdown-item" [routerLink]="service.route">
-              <i class=" fs-lg opacity-70 me-2" [ngClass]="service.iconClass"></i>
-              {{service.label}}
-            </a>
-          </ng-container>
-          <div class="dropdown-divider"></div>
-          <h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Tableau de bord</h6>
-          <ng-container *ngFor="let service of services">
-            <a class="dropdown-item" [routerLink]="service.route">
-              <i class="fs-lg opacity-70 me-2" [ngClass]="service.iconClass"></i>
-              {{service.label}}
-            </a>
-          </ng-container>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item btn-outline-light" [routerLink]="'/account/signout'">
-            Se déconnecter
           </a>
+          <div class="dropdown-menu dropdown-menu-end my-1">
+            <h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Mon compte</h6>
+            <ng-container *ngFor="let service of services">
+              <a class="dropdown-item" [routerLink]="service.route">
+                <i class=" fs-lg opacity-70 me-2" [ngClass]="service.iconClass"></i>
+                {{service.label}}
+              </a>
+            </ng-container>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Tableau de bord</h6>
+            <ng-container *ngFor="let service of services">
+              <a class="dropdown-item" [routerLink]="service.route">
+                <i class="fs-lg opacity-70 me-2" [ngClass]="service.iconClass"></i>
+                {{service.label}}
+              </a>
+            </ng-container>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item btn-outline-light" [routerLink]="'/account/signout'">
+              Se déconnecter
+            </a>
+          </div>
         </div>
       </div>
     </div>
