--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -68,7 +68,7 @@ Newsletter END -->
               <ul class="nav flex-column text-primary-hover">
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
                     (click)="openCategoryPosts(category, $event)"
-                    *ngFor="let category of myJssCategories">{{category.name}}</a></li>
+                    *ngFor="let category of jssCategories">{{category.name}}</a></li>
               </ul>
             </div>
           </div>
