--- a/client-jss/src/app/main/components/podcast-list/podcast-list.component.html
+++ b/client-jss/src/app/main/components/podcast-list/podcast-list.component.html
@@ -16,8 +16,8 @@
             <div class="col-md-7">
               <div class="d-flex justify-content-between mb-2">
                 <!-- Episode -->
-                <ng-container *ngIf="podcast.myJssCategories!=null && podcast.myJssCategories.length>0">
-                  <a *ngFor="let category of podcast.myJssCategories" style="cursor: pointer;"
+                <ng-container *ngIf="podcast.jssCategories!=null && podcast.jssCategories.length>0">
+                  <a *ngFor="let category of podcast.jssCategories" style="cursor: pointer;"
                     (click)="openCategoryPosts(category, $event)"
                     class="badge text-bg-danger mb-2 margin-category btn-primary-soft"
                     [style.background-color]="category.color+' !important'"><i
