--- a/client-myjss/src/app/modules/company/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<section class="container mb-5">
+<section class="container my-5">
   <div class="row pt-md-2 pt-lg-3 pt-xl-4 pb-lg-2 pb-xl-3">
     <div class="col-md-6">
       <h1 class="h1 pe-xxl-5 me-xl-4 mb-md-0 text-white">Journal Spécial des Sociétés & MyJSS</h1>
@@ -24,7 +24,7 @@
   </div>
 </section>
 
-<section class="container">
+<section class="container mt-3 mb-5 pb-5">
   <div class="row g-4 justify-content-between">
     <div class=" col-md-4 text-start">
       <div class=" h2 mb-1 text-white">1898</div>
@@ -41,7 +41,7 @@
   </div>
 </section>
 
-<section class="overflow-hidden py-5">
+<section class="overflow-hidden py-5 my-5">
   <div class="container row">
     <p>Qui sommes-nous ? </p>
     <h2 class="h1 pb-3 mb-lg-4 text-white">Du papier au digital, toujours à vos côtés</h2>
@@ -159,11 +159,11 @@
 <section class="container py-5 my-lg-3 my-xl-4 my-xxl-5">
   <div class="row g-4 g-sm-3 g-lg-4 pb-2 pb-sm-4 pb-xl-5 mb-lg-2 mb-xl-0 mb-xxl-2">
     <div class="col-sm-5">
-      <a class="d-block card-hover zoom-effect h-100" href="assets/img/societe/office_panel_1.png">
+      <a class="d-block card-hover zoom-effect h-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
+        data-bs-img="assets/img/societe/office_panel_1.png">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
-          <div class="position-absolute top-0 start-0 w-100 h-100 "></div>
         </div>
         <div class="zoom-effect-wrapper rounded-5 h-100">
           <img class="zoom-effect-img w-100 h-100 object-fit-cover" src="assets/img/societe/office_panel_1.png"
@@ -171,12 +171,13 @@
         </div>
       </a>
     </div>
+
     <div class="col-sm-7">
-      <a class="d-block card-hover zoom-effect h-100" href="assets/img/societe/office_panel_2.png">
+      <a class="d-block card-hover zoom-effect h-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
+        data-bs-img="assets/img/societe/office_panel_2.png">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
-          <div class="position-absolute top-0 start-0 w-100 h-100 "></div>
         </div>
         <div class="zoom-effect-wrapper rounded-5 h-100">
           <img class="zoom-effect-img w-100 h-100 object-fit-cover" src="assets/img/societe/office_panel_2.png"
@@ -185,13 +186,15 @@
       </a>
     </div>
   </div>
+
+  <!-- Second row of images -->
   <div class="row g-4 g-sm-3 g-lg-4 pb-2 pb-sm-4 pb-xl-5 mb-lg-2 mb-xl-0 mb-xxl-2">
     <div class="col-sm-4 d-flex align-items-stretch">
-      <a class="d-block card-hover zoom-effect h-100 w-100" href="assets/img/societe/office_panel_3.png">
+      <a class="d-block card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
+        data-bs-img="assets/img/societe/office_panel_3.png">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
-          <div class="position-absolute top-0 start-0 w-100 h-100 "></div>
         </div>
         <div class="zoom-effect-wrapper rounded-5 h-100 w-100">
           <img class="zoom-effect-img w-100 h-100 object-fit-cover" src="assets/img/societe/office_panel_3.png"
@@ -201,11 +204,11 @@
     </div>
 
     <div class="col-sm-3 d-flex align-items-stretch">
-      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="assets/img/societe/office_panel_4.png">
+      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal"
+        data-bs-target="#imageModal" data-bs-img="assets/img/societe/office_panel_4.png">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
-          <div class="position-absolute top-0 start-0 w-100 h-100 "></div>
         </div>
         <div class="zoom-effect-wrapper rounded-5 h-100 w-100">
           <img class="zoom-effect-img w-100 h-100 object-fit-cover" src="assets/img/societe/office_panel_4.png"
@@ -215,11 +218,11 @@
     </div>
 
     <div class="col-sm-5 d-flex align-items-stretch">
-      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="assets/img/societe/office_panel_5.png">
+      <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal"
+        data-bs-target="#imageModal" data-bs-img="assets/img/societe/office_panel_5.png">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
-          <div class="position-absolute top-0 start-0 w-100 h-100 "></div>
         </div>
         <div class="zoom-effect-wrapper rounded-5 h-100 w-100">
           <img class="zoom-effect-img w-100 h-100 object-fit-cover" src="assets/img/societe/office_panel_5.png"
@@ -228,18 +231,34 @@
       </a>
     </div>
   </div>
+
+  <!-- Modal Bootstrap -->
+  <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true"
+    data-bs-backdrop="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body d-flex justify-content-center align-items-center">
+          <img id="modal-image" class="img-fluid" src="" alt="Image">
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
-<section class="container mt-md-4 mb-3">
+
+<section class="container mt-md-4 pb-4 mb-5">
   <div class="container row">
     <p>Nos engagements</p>
     <h2 class="h1 pb-3 mb-lg-4 text-white">Vers un avenir éco-responsable</h2>
   </div>
   <div class="row d-flex align-items-stretch">
-    <!-- Première carte -->
-    <div class="col-4 d-flex">
+    <!-- First card -->
+    <div class="col-md-4 d-flex my-2">
       <div class="card mx-2 flex-grow-1 border-0 rounded-5">
-        <div class="card-body d-flex flex-column align-items-center justify-content-center h-100 pb-3">
+        <div class="card-body d-flex flex-column align-items-center justify-content-center h-100">
           <h4 class="card-title text-white">Objectif 0 papier</h4>
           <p class="card-text text-grey mb-0">Nous avons déjà réduit notre consommation de papier de 90%.
             Nous visons le 0% pour 2027.</p>
@@ -247,10 +266,10 @@
       </div>
     </div>
 
-    <!-- Deuxième carte -->
-    <div class="col-4 d-flex">
+    <!-- Second card -->
+    <div class="col-md-4 d-flex my-2">
       <div class="card mx-2 flex-grow-1 border-0 rounded-5">
-        <div class="card-body d-flex flex-column align-items-center justify-content-center h-100 pb-3">
+        <div class="card-body d-flex flex-column align-items-center justify-content-center h-100">
           <h4 class="card-title text-white">Des locaux respectueux de l'environnement</h4>
           <p class="card-text text-grey mb-0">Nous avons déménagé dans des bureaux qui ont obtenu la certification
             BREEAM IN USE “very good”.</p>
@@ -258,10 +277,10 @@
       </div>
     </div>
 
-    <!-- Troisième carte -->
-    <div class="col-4 d-flex">
+    <!-- Third card -->
+    <div class="col-md-4 d-flex my-2">
       <div class="card mx-2 flex-grow-1 border-0 rounded-5">
-        <div class="card-body d-flex flex-column align-items-center justify-content-center h-100 pb-3">
+        <div class="card-body d-flex flex-column align-items-center justify-content-center h-100">
           <h4 class="card-title text-white">Promotion du vélo</h4>
           <p class="card-text text-grey mb-0">Nous encourageons les trajets en vélo avec une prise en charge des frais
             kilométriques du domicile des salariés au bureau.</p>
