First corrections of code review for About-us

--- a/client-myjss/src/app/modules/company/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/about-us/about-us.component.html
@@ -16,7 +16,7 @@
   </div>
 </section>
 
-<section class="container pb-3">
+<section class="pb-3">
   <div class="jarallax" data-jarallax>
     <div class="jarallax-img d-none d-sm-block"
       style="background-image: url(assets/img/landing/coworking-space/parallax-image.jpg);">
