--- a/client-myjss/src/app/modules/company/company/company.component.html
+++ b/client-myjss/src/app/modules/company/company/company.component.html
@@ -1,7 +1,8 @@
-<section class="container pt-5 mt-5">
+<section class="pt-5 mt-5">
   <!-- Breadcrumb -->
   <nav aria-label="breadcrumb">
     <ol class="pt-lg-5 pb-lg-4 pb-2 breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
       <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
       <li class="breadcrumb-item" *ngFor="let item of breadcrumbItems; let last = last" [ngClass]="{'active': last}"
         aria-current="page">
@@ -20,28 +21,13 @@
       </a>
     </li>
   </ul>
-
-  <!-- Content Section -->
-  <div class="tab-content">
-    <div *ngIf="'/company/about-us' == selectedTab.route">
-      <div class="tab-pane" id="aboutUs">
-        <about-us></about-us>
-      </div>
-    </div>
-  </div>
-  <div *ngIf="'/company/our-story' == selectedTab.route">
-    <div class="tab-pane" id="ourStory">
-      <our-story></our-story>
-    </div>
-  </div>
-  <div *ngIf="'/company/' == selectedTab.route">
-    <div class="tab-pane" id="ourTeams">
-
-    </div>
-  </div>
-  <div *ngIf="'/company/' == selectedTab.route">
-    <div class="tab-pane" id="joinUs">
-
-    </div>
-  </div>
 </section>
+
+<!-- Content Section -->
+<div class="tab-content">
+  <div *ngIf="'/company/about-us' == selectedTab.route">
+    <div class="tab-pane" id="aboutUs">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
