--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -258,8 +258,7 @@
             <history [entity]="selectedResponsable" [entityType]="RESPONSABLE_ENTITY_TYPE"></history>
           </ng-template>
         </mat-tab>
-        <mat-tab label="Préférences de communication"
-          *ngIf="selectedResponsable?.id!=null && selectedResponsable?.id!=undefined">
+        <mat-tab label="Préférences de communication" *ngIf="selectedResponsable && selectedResponsable.id">
           <ng-template matTabContent>
             <div class="mat-elevation-z2 form-div">
               <communication-preference [responsable]="selectedResponsable"></communication-preference>
