First version of our-story component

--- a/client-myjss/src/app/modules/company/components/company/company.component.html
+++ b/client-myjss/src/app/modules/company/components/company/company.component.html
@@ -1,4 +1,4 @@
-<section class="pt-5 mt-5">
+<section class="pt-5 mt-5 container">
   <!-- Breadcrumb -->
   <nav aria-label="breadcrumb">
     <ol class="pt-lg-5 pb-lg-4 pb-2 breadcrumb">
@@ -25,8 +25,8 @@
 
 <!-- Content Section -->
 <div class="tab-content">
-  <div *ngIf="'/company/about-us' == selectedTab.route">
-    <div class="tab-pane" id="aboutUs">
+  <div>
+    <div class="tab-pane">
       <router-outlet></router-outlet>
     </div>
   </div>
