--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -41,12 +41,12 @@
   </div>
 </section>
 
-<section class="overflow-hidden py-5 my-5">
-  <div class="container row">
+<section class="container overflow-hidden py-5 my-5">
+  <div class="row">
     <p>Qui sommes-nous ? </p>
     <h2 class="h1 pb-3 mb-lg-4 text-white">Du papier au digital, toujours à vos côtés</h2>
   </div>
-  <div class="container card-info">
+  <div class="card-info">
     <div class="row g-4">
       <div class="col-md-7 order-md-1">
         <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/societe/societe_office_about_us.jpg"
@@ -69,8 +69,8 @@
   </div>
 </section>
 
-<section class="overflow-hidden pb-5">
-  <div class="container card-info">
+<section class="container overflow-hidden pb-5">
+  <div class="card-info">
     <div class="row g-4">
       <div class="card bg-yellow-color rounded-3 col-md-6 order-md-2">
         <img class="object-fit-contain w-100 h-100 " src="assets/img/societe/screen_backoffice.png" alt="Image">
@@ -104,7 +104,7 @@
 </section>
 
 <section class="container pt-5 mt-1 mt-sm-2 mt-xl-4 mt-xxl-5">
-  <div class="container row">
+  <div class="row">
     <p>Nos valeurs</p>
     <h2 class="h1 text-white">Des valeurs fortes au service de nos clients</h2>
   </div>
