Small corrections on our-story and about-us

--- a/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
@@ -6,12 +6,13 @@
 
     <div class="col-md-6 col-xl-5 offset-xl-1">
       <p class="text-body fs-sm mb-5 text-white">Le JSS, c’est avant tout une entreprise familiale et indépendante de
-        plus de 125 ans.
-        Ce sont aussi des millions d’entreprises qui nous ont fait confiance.
+        plus de 125 ans.<br />
+        Ce sont aussi des millions d’entreprises qui nous ont fait confiance.<br />
         Acteur reconnu et incontournable des annonces et formalités légales, le JSS accompagne les entreprises dans
-        toutes les étapes de leur vie.
-        Notre histoire continue de s’écrire au rythme des défis et innovations.
-        Découvrez les grandes étapes qui ont façonné notre parcours. </p>
+        toutes les étapes de leur vie.<br />
+        Notre histoire continue de s’écrire au rythme des défis et innovations.<br />
+        Découvrez les grandes étapes qui ont façonné notre parcours.<br />
+      </p>
     </div>
   </div>
 </section>
